test/parser/wildcard/wildcard_type_error.exp
Error: Unexpected token `_`, expected start of type
test/parser/wildcard/wildcard_type_error.myte:3:7
 3 | var x: _ = 1
   |        ^